# Real-Estate-Price-Prediction

./: .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
data/: listing_urls.txt
docs/: dataset_schema.md
models/: model_metadata.json
notebooks/: analysis.ipynb  modeling_activities_04_05.ipynb
scraper/: __init__.py  collect_urls.py  run_scraper.py
src/: __init__.py  commands.py  data.py  data_cleaning.py  evaluation.py  features.py  model_pipeline.py  prediction.py  preprocessing.py  training.py
tests/: test_activity4_baseline_deliverable.py  test_analysis_notebook_preprocessing.py  test_model_evaluation.py  test_model_training_pipeline.py  test_modeling_notebook_deliverables.py  test_real_estate_cleaning.py  test_real_estate_data.py  test_real_estate_features.py  test_real_estate_prediction.py  test_real_estate_preprocessing.py  test_real_estate_training.py  test_scraper_scripts.py  test_streamlit_dashboard.py
