[project]
name = "CS490-Projekat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.14.3",
  "ipykernel>=7.2.0",
  "jupyter>=1.1.1",
  "matplotlib>=3.10.9",
  "nbformat>=5.10.4",
  "pandas>=2.3.3",
  "requests>=2.32.5",
  "scikit-learn>=1.7.2",
  "seaborn>=0.13.2",
  "tqdm>=4.67.3",
]
