[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "CS490-Projekat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.14.3",
  "catboost>=1.2.8",
  "ipykernel>=7.2.0",
  "joblib>=1.5.3",
  "jupyter>=1.1.1",
  "matplotlib>=3.10.9",
  "nbformat>=5.10.4",
  "pandas>=2.3.3",
  "requests>=2.32.5",
  "scikit-learn>=1.7.2",
  "seaborn>=0.13.2",
  "streamlit>=1.57.0",
  "tqdm>=4.67.3",
  "xgboost>=3.0.0",
]

[project.scripts]
test = "src.commands:test"
app = "src.commands:streamlit"
train = "src.training:main"

[tool.setuptools]
packages = ["scraper", "src"]
